syntax = "proto3";

package proto;

option csharp_namespace = "GetOptimum.Node.Proto";

// CommandStream establish a stream connection to send and receive commands
// between the Optimum Gateway and the p2p node
service CommandStream {
  rpc ListenCommands(stream ListenCommandsRequest) returns (stream ListenCommandsResponse) {}
  rpc Health(Void) returns (HealthResponse) {}
  rpc ListTopics(Void) returns (TopicList) {}
}

message Void {}

message TopicList {
  repeated string topics = 1;
}

message HealthResponse {
  bool status = 1;
  string node_mode = 2;
  float memory_used = 3;
  float cpu_used = 4;
  float disk_used = 5;
}

message ListenCommandsRequest {
  int32 command = 1;
  bytes data = 2;
  string topic = 3;
}

message ListenCommandsResponse {
  ListenCommandsResponseType command = 1;
  bytes data = 2;
  bytes metadata = 3;
}

enum ListenCommandsResponseType {
  Unknown = 0;
  Message = 1;
  MessageTraceOptimumP2P = 2;
  MessageTraceGossipSub = 3;
}
